<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="ButtonComa">,</string>
    <string name="Button0">0</string>
    <string name="ButtonParentesiStart">(</string>
    <string name="ButtonParentesiFinish">)</string>
    <string name="ButtonDivision">/</string>
    <string name="Button8">8</string>
    <string name="ButtonIgual">=</string>
    <string name="Button5">5</string>
    <string name="ButtonCos">cos</string>
    <string name="Button6">6</string>
    <string name="ButtonSum">+</string>
    <string name="ButtonSubstract">-</string>
    <string name="ButtonSin">sin</string>
    <string name="ButtonTan">tan</string>
    <string name="Button9">9</string>
    <string name="Button1">1</string>
    <string name="Button4">4</string>
    <string name="Button3">3</string>
    <string name="Button7">7</string>
    <string name="Button2">2</string>
    <string name="ButtonAC">AC</string>
    <string name="ButtonMultiply">x</string>
</resources>